--- a/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Postulante/miPostulacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Postulante/miPostulacion.html
@@ -9,14 +9,14 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="./resource/img/Icon_Logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
     <link rel="stylesheet" href="../../css/consultaUsuario.css" />
-    <title>Consulta de usuario</title>
+    <title>Mi postulación</title>
   </head>
 
   <body>
@@ -137,7 +137,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./consultaOfertaLaboralPostulante.html"
+                        href="../consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -198,75 +198,60 @@
             </div>
           </section>
         </div>
-        <div class="col-8">
-          <section>
-            <h2>Usuarios registrados:</h2>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-3 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/Usuarios/Postulantes/Postulante01.png"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
+            <!-- Columna central para la tarjeta existente -->
+            <div class="col-md-6">
+                <!-- Contenido de la tarjeta existente aquí -->
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../../img/Usuarios/Postulantes/Postulante01.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Postulación a oferta laboral</h5>
+                                <p class="card-text">
+                                    <strong>Postulante: </strong> <a href="consultarMiPerfilPostulante.html">Lucía García</a>
+                                    <br>
+                                    <br>
+                                    <strong>CV reducido: </strong> Licenciada en Administración,
+                                    experiencia en gestión de equipos y proyectos.
+                                    Conocimientos en Microsoft Office.
+                                    <br>
+                                    <br>
+                                    <strong>Motivación: </strong> Estoy emocionada por
+                                    la oportunidad de formar parte de un equipo
+                                    dinámico y contribuir con mis habilidades de
+                                    liderazgo.
+                                    <br>
+                                    <br>
+                                    <strong>Fecha de postulación: </strong> 16/08/23
+                                    <br>
+                                    <br>
+                                    <div class="row justify-content-center buttons-container">
+                                    </div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      lgarcia
-                    </h5>
-                    <p class="card-text">Tipo: Postulante</p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a
-                      href="./consultarMiPerfilPostulante.html"
-                      class="btn btn-primary"
-                      >Perfil</a
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-3 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../../img/Usuarios/Empresas/Empresa01.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
+            <!-- Columna derecha para la última card -->
+            <div class="col-md-3">
+                <!-- Contenido de la última card aquí -->
+                <div class="card">
+                    <img src="../../img/ofertas/Oferta01.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="./ofertaPostulantePostulado.html" class="card-link">
+                            <h5 class="card-title text-center">Desarrollador Frontend</h5>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      EcoTech
-                    </h5>
-                    <p class="card-text">Tipo: Empresa</p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a
-                      href="../Postulante/perfilGeneralEmpresa.html"
-                      class="btn btn-primary"
-                      >Perfil</a
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
-          </section>
         </div>
-      </div>
     </main>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/tpgr04/Tarea2/Servidor-Web/src/main/webapp/recourse/js/dejarOpcionMarcada.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-rfFPp5f5I5fHgBkof8K7jO5/Jz7PoCmMF+L5z5q8Zw5dIdFm0iXb5V5Dj6P5d5F5D" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
+</body>
 </html>
