--- a/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Visitante/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Visitante/consultaUsuario.html
@@ -9,13 +9,14 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="./resource/img/Icon_Logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../../css/general.css" />
-    <title>Inicio</title>
+    <link rel="stylesheet" href="../../css/consultaUsuario.css" />
+    <title>Consulta Usuario</title>
   </head>
 
   <body>
@@ -23,7 +24,7 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="./indexPostulante.html"
+            <a href="../../../index.html"
               ><img
                 src="../../img/Logo.svg"
                 alt="Logo"
@@ -50,51 +51,27 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-2">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="./indexPostulante.html"
+                <a
+                  class="nav-link text-white"
+                  href="../../../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <img
-                  class="rounded-pill imgPerfil"
-                  src="../../img/Usuarios/Postulantes/Postulante01.png"
-                  alt="Foto de Perfil"
-                />
-              </li>
-              <li class="nav-item">
-                <div class="dropdown selectUsuario">
-                  <button
-                    type="button"
-                    class="btn dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                  >
-                    lgarcia
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="./consultarMiPerfilPostulante.html"
-                        >Perfil</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="../../../index.html"
-                        >Cerrar Sessión</a
-                      >
-                    </li>
-                  </ul>
-                </div>
+                <a
+                  class="nav-link text-white"
+                  href="../../menu/inicioSession.html"
+                  >Acceder</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </div>
     </nav>
-
     <main class="container pt-5">
       <div class="row">
         <div class="col-3">
@@ -109,7 +86,9 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaUsuario.html"
+                      <a
+                        class="btn"
+                        href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
@@ -134,7 +113,9 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOfertaLaboralPostulante.html"
+                      <a
+                        class="btn"
+                        href=""
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -197,29 +178,31 @@
         </div>
         <div class="col-8">
           <section>
+            <h2>Usuarios registrados:</h2>
             <div class="card">
               <div class="row g-0">
                 <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
+                  class="col-md-3 justify-content-center align-items-center d-flex"
                 >
                   <img
-                    src="../../img/ofertas/Oferta01.png"
+                    src="../../img/Usuarios/Postulantes/Postulante01.png"
                     class="img-fluid rounded-start"
                     alt="Imagen Oferta"
                   />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-9">
                   <div class="card-body">
                     <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Desarrollador Frontend
+                      lgarcia
                     </h5>
-                    <p class="card-text">
-                      Únete a nuestro equipo de desarrollo frontend y crea
-                      experiencias de usuario excepcionales.
-                    </p>
+                    <p class="card-text">Tipo: Postulante</p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaPostulantePostulado.html" class="btn btn-primary">Mas Info</a>
+                    <a
+                      href="../Visitante/perfilGeneralPostulante.html"
+                      class="btn btn-primary"
+                      >Perfil</a
+                    >
                   </div>
                 </div>
               </div>
@@ -227,26 +210,27 @@
             <div class="card">
               <div class="row g-0">
                 <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
+                  class="col-md-3 justify-content-center align-items-center d-flex"
                 >
                   <img
-                    src="../../img/ofertas/Oferta07.jpeg"
+                    src="../../img/Usuarios/Empresas/Empresa01.jpg"
                     class="img-fluid rounded-start"
                     alt="Imagen Oferta"
                   />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-9">
                   <div class="card-body">
                     <h5 class="card-header p-0 border-0 bg-white text-start">
-                      A. de Marketing Digital
+                      EcoTech
                     </h5>
-                    <p class="card-text">
-                      Únete a nuestro equipo de marketing y trabaja en
-                      estrategias digitales innovadoras.
-                    </p>
+                    <p class="card-text">Tipo: Empresa</p>
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaPostulanteNoPostulado.html" class="btn btn-primary">Mas Info</a>
+                    <a
+                      href="../Visitante/perfilGeneralEmpresa.html"
+                      class="btn btn-primary"
+                      >Perfil</a
+                    >
                   </div>
                 </div>
               </div>
@@ -254,14 +238,150 @@
           </section>
         </div>
       </div>
-      <div></div>
     </main>
+<!--
+    <main class="container pt-5">
+      <div class="row">
+        <div class="col-3">
+          <section class="text-center">
+            <div class="table-responsive overflow-auto tablaKeyword">
+              <table class="table table-hover table-bordered">
+                <thead class="table-primary">
+                  <tr>
+                    <th class="cabezaTabla">Menú</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaUsuario.html"
+                        >Consulta usuarios</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaOferta.html"
+                        >Consulta ofertas laborales</a
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+          <section class="text-center">
+            <div class="tablaKeyword table-responsive overflow-auto">
+              <table class="table table-hover table-bordered">
+                <thead class="table-primary">
+                  <tr>
+                    <th class="cabezaTabla">Keywords</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Tiempo Completo</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Medio tiempo</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Remoto</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Freelance</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Temporal</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Permanente</button></td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Computación</button></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Administración</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><button class="btnKeyword btn">Logística</button></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button class="btnKeyword btn">Contabilidad</button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+        </div>
+        <div class="mainCenter">
+          <div class="espacio3"></div>
+          <section class="consultaUsuario">
+            <div class="container">
+              <h1>Usuarios registrados</h1>
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th class="thClass">Perfil</th>
+                      <th class="thClass">Nickname</th>
+                      <th class="thClassLarge">Tipo de Usuario</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="./consultarPerfilPostulante">Perfil</a></td>
+                      <td>lgarcia</td>
+                      <td>Postulante</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <a href="./consultarPerfilEmpresa.html">Perfil</a>
+                      </td>
+                      <td>EcoTech</td>
+                      <td>Empresa</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+  -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/dejarOpcionMarcada.js"></script>
+    <script src="/tpgr04/Tarea2/Servidor-Web/src/main/webapp/resource/js/dejarOpcionMarcada.js"></script>
   </body>
 </html>
