--- a/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Visitante/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/resource/menu/Visitante/index.html
@@ -9,12 +9,12 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="./resource/img/Icon_Logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./recourse/css/general.css" />
+    <link rel="stylesheet" href="./resource/css/general.css" />
     <title>Inicio</title>
   </head>
 
@@ -25,7 +25,7 @@
           <div class="col-2">
             <a href="./index.html"
               ><img
-                src="./recourse/img/Logo.svg"
+                src="./resource/img/Logo.svg"
                 alt="Logo"
                 class="navbar-brand img-fluid"
             /></a>
@@ -58,7 +58,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link text-white"
-                  href="./recourse/menu/inicioSession.html"
+                  href="./resource/menu/inicioSession.html"
                   >Acceder</a
                 >
               </li>
@@ -84,7 +84,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaUsuario.html"
+                        href="./resource/menu/Visitante/consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
@@ -93,7 +93,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        href="./resource/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                         >Ver tipos de publicaciones</a
                       >
                     </td>
@@ -102,7 +102,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        href="./resource/menu/Visitante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
                         >Ver tipos de paquetes</a
                       >
                     </td>
@@ -111,7 +111,7 @@
                     <td class="d-flex">
                       <a
                         class="btn"
-                        href="./recourse/menu/Visitante/consultaOfertaLaboralVisitante.html"
+                        href="./resource/menu/Visitante/consultaOfertaLaboralVisitante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
@@ -180,7 +180,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex"
                 >
                   <img
-                    src="./recourse/img/ofertas/Oferta01.png"
+                    src="./resource/img/ofertas/Oferta01.png"
                     class="img-fluid rounded-start"
                     alt="Imagen Oferta"
                   />
@@ -197,7 +197,7 @@
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
                     <a
-                      href="./recourse/menu/Visitante/ofertaVisitante.html"
+                      href="./resource/menu/Visitante/ofertaVisitante.html"
                       class="btn btn-primary"
                       >Mas Info</a
                     >
@@ -211,7 +211,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex"
                 >
                   <img
-                    src="./recourse/img/ofertas/Oferta07.jpeg"
+                    src="./resource/img/ofertas/Oferta07.jpeg"
                     class="img-fluid rounded-start"
                     alt="Imagen Oferta"
                   />
@@ -228,7 +228,7 @@
                   </div>
                   <div class="card-footer border-0 bg-white text-end">
                     <a
-                      href="./recourse/menu/Visitante/ofertaVisitanteMarqueting.html"
+                      href="./resource/menu/Visitante/ofertaVisitanteMarqueting.html"
                       class="btn btn-primary"
                       >Mas Info</a
                     >
